--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Oppia enables the creation of interactive online lessons.",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "karma start --browsers Chrome_Travis",
-    "test:prod": "karma start --browsers Chrome_Travis --single-run"
+    "clean": "rm -rf build",
+    "prepare": "mkdir -p build",
+    "test": "karma start",
+    "test:prod": "karma start --single-run",
+    "build-artifact": "echo OK > build/result.txt",
+    "build": "yarn && yarn run clean && yarn run prepare && yarn run test:prod && yarn run build-artifact"
   },
   "repository": {
     "type": "git",
@@ -49,6 +53,7 @@
     "gulp-concat": "^2.6.1",
     "htmllint": "^0.8.0",
     "htmllint-cli": "0.0.7",
+    "is-docker": "^1.1.0",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^4.1.0",
@@ -57,6 +62,7 @@
     "karma-jasmine": "^2.0.1",
     "karma-json-fixtures-preprocessor": "^0.0.6",
     "karma-ng-html2js-preprocessor": "^1.0.0",
+    "node": "^12.4.0",
     "postcss-syntax": "^0.36.2",
     "protractor": "^5.4.2",
     "protractor-screenshot-reporter": "0.0.5",
@@ -65,8 +71,10 @@
     "typescript": "^3.4.5",
     "uglify-js": "^3.5.8",
     "webdriver-manager": "^12.1.2",
-    "yargs": "^13.2.2",
-    "is-docker": "^1.1.0"
+    "yargs": "^13.2.2"
   },
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "yarn": "^1.16.0"
+  }
 }
