--- a/docker-compose_frontend-tests.yml
+++ b/docker-compose_frontend-tests.yml
@@ -8,4 +8,5 @@ services:
     working_dir: /home/oppia
     container_name: "oppia"
     volumes:
-      - "./:/home/oppia/:rw"
+      - .:/home/oppia/:rw
+      - ./node_modules:/home/oppia/node_modules
