--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ language: python
 python:
 - 2.7
 
+addons:
+  browserstack:
+    username: $USERNAME
+    access_key: $ACCESS_KEY
+  chrome: stable
+
 branches:
   only:
   - master
